2015-05-07  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amanda-rest-server.pl: Add a --development option
	* man/xml-source/amanda-rest-server.8.xml: Document --development

2015-05-07  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Status.pm: More fix.

2015-05-06  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Rest_Runs.pl: Add retry, retry_level and
	  will_retry.

2015-05-06  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Status.pm: VAULT-WRITE must reset the retry flag.

2015-05-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Add a 'requeue' line to the amdump log file.
	* perl/Amanda/Status.pm: Better handling of retry.

2015-05-06  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c, client-src/rundump.c,
	  client-src/runtar.c, client-src/selfcheck.c,
	  client-src/sendbackup.c, client-src/senddiscover.c,
	  xfer-src/filter-process.c: Always free the result of safe_env.

2015-05-06  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/amandates.c, client-src/sendsize.c,
	  common-src/ammessage.c: Fix bug found by coverity.
	* device-src/ndmp-device.c (ndmp_device_eject): Call open_connection.

2015-05-05  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendbackup.c: Cleanup.

2015-04-30  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Cleanup.pm: Log the notes
	* perl/Amanda/Report.pm: Parse amcleanup log line
	* perl/Amanda/Report/human.pm (PROGRAM_ORDER): Add amcleanup
	* perl/Amanda/Rest/Runs.pmi (kill): Accept notes argument
	* server-src/amcleanup.pl: Add --note argument
	* server-src/logfile.h (logtype_e): Add P_AMCLEANUP
	* server-src/logfile.c (logtype_str): Add "amcleanup"
	* perl/Amanda/Logfile.swg: Add P_AMCLEANUP
	* man/xml-source/amcleanup.8.xml: Document --note argument

2015-04-29  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c: Fix progress_func and set timeout to 0.
